--- a/app/src/main/res/layout-land/fragment_game_picker.xml
+++ b/app/src/main/res/layout-land/fragment_game_picker.xml
@@ -30,11 +30,11 @@
 
         <variable
             name="viewState"
-            type="by.klnvch.link5dots.multiplayer.activities.PickerViewState" />
+            type="by.klnvch.link5dots.ui.game.picker.PickerViewState" />
 
         <variable
             name="listener"
-            type="by.klnvch.link5dots.multiplayer.activities.OnPickerClickListener" />
+            type="by.klnvch.link5dots.ui.game.picker.OnPickerClickListener" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -105,10 +105,11 @@
             android:layout_height="wrap_content"
             android:enabled="@{viewState.createButtonEnabled}"
             android:maxLines="2"
-            android:text="@string/name_not_set"
             android:visibility="@{viewState.statusVisibility}"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textStatusLabel" />
+            app:layout_constraintTop_toBottomOf="@+id/textStatusLabel"
+            app:setRoomSate="@{viewState.targetState}"
+            tools:text="@string/name_not_set" />
 
         <ProgressBar
             android:id="@+id/progressCreate"
@@ -163,7 +164,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:setScanning="@{viewState.scanning}" />
 
         <TextView
             android:id="@+id/textWarningEmpty"
