--- a/app/src/main/res/layout-land/fragment_game_picker.xml
+++ b/app/src/main/res/layout-land/fragment_game_picker.xml
@@ -161,11 +161,11 @@
             android:id="@+id/listTargets"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            app:items="@{viewState.discoveredItems}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
-            app:layout_constraintTop_toTopOf="parent"
-            app:setScanning="@{viewState.scanning}" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textWarningEmpty"
@@ -173,7 +173,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/search_no_results"
-            android:visibility="gone"
+            android:visibility="@{viewState.noResultLabelVisibility}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
